Update the project to use query-filter-builder package v1.0.0